# playwright-mcp-sft

./: pyproject.toml  trainer.ipynb
