[project]
name = "playwright-mcp-sft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "jupyter>=1.1.1",
    "mcp>=1.12.0",
    "transformers>=4.53.2",
    "trl>=0.19.1",
    "unsloth>=2025.7.2",
    "wandb>=0.21.0",
]
